# MCP-Server-Totvs-Moda

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PUBLISHING.md  README.md  claude_desktop_config.example.json  context_cache.py  pyproject.toml  server.py  totvs_client.py
docs/: MIGRATION_v3.0.md  PATTERNS.md  PROJECT_STATE.md  README.md  ROADMAP.md
tests/: conftest.py  test_aggregators.py  test_context_cache.py  test_defaults.py  test_fields.py  test_fields_integration.py  test_new_endpoints_v23.py  test_product_v31.py  test_tools_regressions.py  test_totvs_client.py  test_value_types.py
tools/: _defaults.py  _fields.py  _value_types.py  account_payable.py  accounts_receivable.py  aggregators.py  analytics.py  convenience.py  data_package.py  fiscal.py  general.py  image.py  logistics.py  other_modules.py  person.py  product.py  purchase_order.py  sales_order.py  seller.py  voucher.py
