[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totvs-moda-mcp"
version = "3.1.2"
description = "MCP Server para API V2 do TOTVS Moda — integre Claude e outros clientes MCP ao seu ERP de moda brasileiro"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["totvs", "mcp", "model-context-protocol", "erp", "fashion", "moda", "brasil"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/fabianoomura/MCP-Server-Totvs-Moda"
Repository = "https://github.com/fabianoomura/MCP-Server-Totvs-Moda"
Issues = "https://github.com/fabianoomura/MCP-Server-Totvs-Moda/issues"

[project.scripts]
totvs-moda-mcp = "server:run"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
